[package]
name = "thememux"
version = "0.1.0"
edition = "2021"
description = "Termux theme changer"
authors = ["magicisyou"]
license = "MIT"
repository = "https://github.com/silentdusk/thememux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
